--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Новый персон</title>
+    <title>Nem person</title>
 </head>
 <body>
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
