--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Все люди</title>
+    <title>All persons</title>
 </head>
 <body>
 <div th:each="person:${people}">
   <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}">user</a>
 </div>
+<br/>
+<hr/>
+
+<a href="/people/new">Create new person</a>
 </body>
 </html>
