--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <p th:text="${person.getName()}">Value</p>
+<p th:text="${person.getEmail()}">Value</p>
 <p th:text="${person.getId()}">Value</p>
 
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
